force-app/main/default/objects/Outbound_Blockchain_Transaction__c/Outbound_Blockchain_Transaction__c.object-meta.xml
<CustomObject>
    <description>Outbound Transactions on the Blockchain. From is an Account Wallet. To is an Org Wallet.</description>
    <label>Outbound Blockchain Transaction</label>
    <nameField>
        <displayFormat>OBC-TXN-{00000000}</displayFormat>
        <label>Outbound Blockchain Transaction Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outbound Blockchain Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>