force-app/main/default/objects/Outbound_Blockchain_Transaction__c/fields/Account_Wallet__c.field-meta.xml
<CustomField>
    <fullName>Account_Wallet__c</fullName>
    <description>Account Wallet that the transaction is sent to.</description>
    <label>Account Wallet (To)</label>
    <referenceTo>Account_Wallet__c</referenceTo>
    <relationshipLabel>Outbound Blockchain Transactions</relationshipLabel>
    <relationshipName>Outbound_Blockchain_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>