force-app/main/default/objects/Outbound_Blockchain_Transaction__c/fields/Asset_Token__c.field-meta.xml
<CustomField>
    <fullName>Asset_Token__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Token</label>
    <referenceTo>Asset_Token__c</referenceTo>
    <relationshipLabel>Outbound Blockchain Transactions</relationshipLabel>
    <relationshipName>Outbound_Blockchain_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>