force-app/main/default/objects/Outbound_Blockchain_Transaction__c/fields/Contract_Address__c.field-meta.xml
<CustomField>
    <fullName>Contract_Address__c</fullName>
    <description>The Raw On Chain Contract Address for Validation</description>
    <label>Contract Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>