force-app/main/default/objects/Outbound_Blockchain_Transaction__c/fields/Network_Name__c.field-meta.xml
<CustomField>
    <fullName>Network_Name__c</fullName>
    <description>Full name of chain. This can include various test nets that match, will come in, but will not be assigned to a real network.</description>
    <label>Chain Network Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>