force-app/main/default/objects/Outbound_Blockchain_Transaction__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Outbound Blockchain Transactions</relationshipLabel>
    <relationshipName>Outbound_Blockchain_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>