force-app/main/default/objects/Outbound_Blockchain_Transaction__c/fields/Org_Wallet__c.field-meta.xml
<CustomField>
    <fullName>Org_Wallet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Wallet belonging to the Org that the transaction departs from.</description>
    <label>Org Wallet (From)</label>
    <referenceTo>Org_Wallet__c</referenceTo>
    <relationshipLabel>Outbound Blockchain Transactions</relationshipLabel>
    <relationshipName>Outbound_Blockchain_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>