force-app/main/default/objects/Outbound_Blockchain_Transaction__c/fields/Test_Networks__c.field-meta.xml
<CustomField>
    <fullName>Test_Networks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If transaction came from a TestNet, this is true.</description>
    <label>Test Networks</label>
    <type>Checkbox</type>
</CustomField>