force-app/main/default/objects/Outbound_Blockchain_Transaction__c/fields/To_Address__c.field-meta.xml
<CustomField>
    <fullName>To_Address__c</fullName>
    <description>To Address from the Blockchain</description>
    <label>To Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>