force-app/main/default/objects/Outbound_Blockchain_Transaction__c/fields/Transaction_Detail__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Detail__c</fullName>
    <description>Link to the block explorer for reference.</description>
    <label>Transaction Detail</label>
    <type>Url</type>
</CustomField>