force-app/main/default/objects/Outbound_Blockchain_Transaction__c/fields/Transaction_Hash__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Hash__c</fullName>
    <label>Transaction Hash</label>
    <length>80</length>
    <type>Text</type>
</CustomField>