force-app/main/default/objects/Outbound_Blockchain_Transaction__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Org_Wallet__c</columns>
    <columns>Account_Wallet__c</columns>
    <columns>Asset_Token__c</columns>
    <columns>Network__c</columns>
    <columns>Transaction_Value__c</columns>
<!--
    <columns>CURRENCY_ISO_CODE</columns>
-->
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>